--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "animate.css": "^4.1.1",
     "astro": "^5.0.0-beta.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal-image": "^2.6.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/react-modal-image": "^2.6.3"
   }
 }
